refactoring and added GGUF support